주특기 심화 과제2

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -83,7 +83,7 @@
 <body>
 <div id="login-form">
     <a href="/">
-        <div id="login-title">Sign up<br><br><span>대나무 숲</span></div>
+        <div id="login-title">Sign up<br><br><span>Blog</span></div>
     </a>
     <div><br><br><br></div>
     <form action="/user/signup" method="post">
