--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 
-    <title>바다 위 대나무 숲</title>
+    <title>nono</title>
     <!--    font-family: 'Jua', sans-serif;-->
     <script>
         $(document).ready(function () {
@@ -44,10 +44,10 @@
         }
 
         function makeMessage(id, name, title, contents, modifiedAt) {
-            return `<a href="../static/detail.html?id=id">
+            return `<a href="detail.html?id=${id}">
                         <div class="card">
                             <div class="metadata">
-                               <div ${id}="${id}-name" class="name">
+                               <div id="${id}-name" class="name">
                                    ${name}
                                </div>
                                <div class="date">
@@ -309,9 +309,8 @@
         <a sec:authorize="!isAuthenticated()" id="signup-text" href="/user/signup">
             회원가입
         </a>
-        <h2>항해99 바다 위 대나무숲<br><br>
+        <h2>과제과제과제<br><br>
             <li sec:authorize="isAuthenticated()"><span th:text="${username}"></span> 님,<br><br></li>
-            맘껏 외치세요 무야호!
         </h2>
     </div>
     <div class="to-write">
