--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                     let usercheck = response;
                     if (usercheck != ""){
                         window.location.replace("/")
-                        alert("이미 로그인되었습니다")
+                        alert("이미 로그인되었습니다'-')/")
                     }
                 }
             });
@@ -62,17 +62,15 @@
     <div class="wrap">
         <div id="login-form">
             <a href="/">
-                <div id="login-title">Dive into<br><br><span>대나무숲</span></div>
+                <div id="login-title">Dive into<br><br><span>Blog</span></div>
             </a>
-            <!--            onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=83a045702bcb9ef7cfab9e5dd660cbf8&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">-->
             <button id="login-kakao-btn"
-                    onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=83a045702bcb9ef7cfab9e5dd660cbf8&redirect_uri=http://115.85.182.57/user/kakao/callback&response_type=code'">
+                    onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=6e80f9908bb132e4c8160e209e1f0c70&redirect_uri=http://localhost:8090/user/kakao/callback&response_type=code'">
                 카카오로 로그인하기
             </button>
             <button id="login-id-btn" onclick="location.href='/user/signup'">
                 회원 가입하기
             </button>
-            <!--/*@thymesVar id="loginError" type="templates"*/-->
             <div th:if="${loginError}" class="alert alert-danger" role="alert">닉네임 또는 패스워드를 확인해주세요.</div>
             <form action="/user/login" method="post">
                 <div class="login-id-label">아이디</div>
